[package]
name = "os"
version = "0.1.0"
authors = ["apogeeoak <59737221+apogeeoak@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.16"
spin = "0.7.1"
uart_16550 = "0.2.12"
x86_64 = "0.13.2"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 5     # (0b10 << 1) | 1

[[test]]
name = "panics"
harness = false
