[package]
name = "os"
version = "0.1.0"
authors = ["apogeeoak <59737221+apogeeoak@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.17"
pc-keyboard = "0.5.1"
pic8259 = "0.10.1"
spin = "0.9.0"
uart_16550 = "0.2.14"
volatile = "0.4.4"
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 5     # (0b10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
